SQuirreL SQL Client Change Log
==============================

${squirrelsql.changelog.header}

Not yet released, available in our Subversion repository and in future snapshots and releases.
===============================================================================================

Enhancements:

Update Tab (in Global Preferences): Added hint/link to Proxy configuration.

Added support for the JTattoo suite of Look-and-Feel classes to the Look-and-Feel plugin.  Thanks to Michael
Hagen (JTattoo author) for integration tips.

New function to open recent and/or favourite sql script files in the SQL editor.
  Available in the SQL editor's and the Aliase's toolbar.
  Look for the icon showing a folder with a watch .


Patch #57 Additional features for dataimport plugin.
  New checkbox in data import dialog that allows to input rows with over 100.000 characters.
  Thanks to Phillip (P_W999) for the patch

Logging of application shutdown:
  Sometimes closing SQuirreL can take some time. From looking at the log file
  one can find out which shutdown actions take long:
  Choose log level: info
  Search the log file for: "Application.shutdown"
  The first Global preferences tab tells where log and log configuration files are.


Introduced keyboard shortcut Ctrl+Shift+Enter to rerun SQL results.
  Thanks to Johnathan James for re-working and drawing attention to the patch hosted at
  http://muzso.hu/2011/06/04/patch-for-squirrel-sql-client-v3.2.1-adds-keyboard-shortcut-for-sql-query-rerun-re-execut
  See also bug #1057.

1609223: New option to enable SQL result tables to read more query results when the user scrolls to the end of the table.
  This option can be switched on in Session Properties and on top of the SQL-Editor just at the place where the
  "Limit rows" check box is.


2569169: Find function for SQL result tables.

Closing or reconnecting Sessions caused SQuirreL to hang when the JDBC driver's connection close method didn't return.