@@ -1,7 +1,6 @@
 package net.sourceforge.squirrel_sql.plugins.dbcopy.actions;
 
 import com.jidesoft.swing.MultilineLabel;
-import net.sourceforge.squirrel_sql.client.gui.mainframe.MainFrame;
 import net.sourceforge.squirrel_sql.fw.gui.GUIUtils;
 import net.sourceforge.squirrel_sql.fw.util.StringManager;
 import net.sourceforge.squirrel_sql.fw.util.StringManagerFactory;
@@ -10,6 +9,8 @@ import javax.swing.*;
 import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.awt.event.MouseAdapter;
+import java.awt.event.MouseEvent;
 
 public class EditPasteTableNameDlg extends JDialog
 {
@@ -18,17 +19,19 @@ public class EditPasteTableNameDlg extends JDialog
 
 
 
-   private JTextField _txtFolderName = new JTextField();
+   private JTextField _txtTableName = new JTextField();
 
    private JButton _btnOK = new JButton(s_stringMgr.getString("EditPasteTableNameDlg.OK"));
    private JButton _btnCancel = new JButton(s_stringMgr.getString("EditPasteTableNameDlg.Cancel"));
 
    private String _tableName;
+   private String _destTableName;
 
 
-   public EditPasteTableNameDlg(Frame owner)
+   public EditPasteTableNameDlg(Frame owner, String destTableName)
    {
       super(owner, s_stringMgr.getString("EditPasteTableNameDlg.title"), true);
+      _destTableName = destTableName;
       createUI();
 
       _btnOK.addActionListener(new ActionListener()
@@ -57,11 +60,11 @@ public class EditPasteTableNameDlg extends JDialog
       {
          public void run()
          {
-            _txtFolderName.requestFocus();
+            _txtTableName.requestFocus();
          }
       });
 
-      setSize(400, 150);
+      setSize(400, 200);
 
    }
 
@@ -78,13 +81,13 @@ public class EditPasteTableNameDlg extends JDialog
 
    private void onOK()
    {
-      if(null == _txtFolderName.getText() || 0 == _txtFolderName.getText().trim().length())
+      if(null == _txtTableName.getText() || 0 == _txtTableName.getText().trim().length())
       {
          JOptionPane.showMessageDialog(this,s_stringMgr.getString("EditPasteTableNameDlg.TableNameEmpty"));
          return;
       }
 
-      _tableName = _txtFolderName.getText();
+      _tableName = _txtTableName.getText();
 
       close();
    }
@@ -96,13 +99,36 @@ public class EditPasteTableNameDlg extends JDialog
 
       GridBagConstraints gbc;
 
-      gbc = new GridBagConstraints(0,0,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.HORIZONTAL, new Insets(5,5,5,5), 0,0);
+      int gridy = 0;
+
+      gbc = new GridBagConstraints(0, gridy,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.HORIZONTAL, new Insets(5,5,5,5), 0,0);
       getContentPane().add(new MultilineLabel(s_stringMgr.getString("EditPasteTableNameDlg.text")), gbc);
 
-      gbc = new GridBagConstraints(0,1,1,1,1,0,GridBagConstraints.NORTHWEST, GridBagConstraints.HORIZONTAL, new Insets(5,5,5,5), 0,0);
-      getContentPane().add(_txtFolderName, gbc);
+      gbc = new GridBagConstraints(0,++gridy,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.HORIZONTAL, new Insets(5,5,5,5), 0,0);
+      getContentPane().add(_txtTableName, gbc);
 
-      gbc = new GridBagConstraints(0,2,1,1,1,0,GridBagConstraints.NORTHWEST, GridBagConstraints.NONE, new Insets(5,5,5,5), 0,0);
+      if (null != _destTableName)
+      {
+         gbc = new GridBagConstraints(0,++gridy,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.HORIZONTAL, new Insets(5,5,5,5), 0,0);
+         JLabel lblDestNameLink = new JLabel(s_stringMgr.getString("EditPasteTableNameDlg.htmlSetNameTo", _destTableName));
+         lblDestNameLink.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
+
+         lblDestNameLink.addMouseListener(new MouseAdapter()
+         {
+            @Override
+            public void mouseClicked(MouseEvent e)
+            {
+               _txtTableName.setText(_destTableName);
+            }
+         });
+
+         getContentPane().add(lblDestNameLink, gbc);
+      }
+
+      gbc = new GridBagConstraints(0,++gridy,1,1,1,1,GridBagConstraints.NORTHWEST, GridBagConstraints.NONE, new Insets(10,5,5,5), 0,0);
+      getContentPane().add(new JPanel(), gbc);
+
+      gbc = new GridBagConstraints(0,++gridy,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.NONE, new Insets(10,5,5,5), 0,0);
       getContentPane().add(createButtonPanel(), gbc);
    }
 
@@ -112,7 +138,7 @@ public class EditPasteTableNameDlg extends JDialog
 
       GridBagConstraints gbc;
 
-      gbc = new GridBagConstraints(0,0,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.NONE, new Insets(5,5,5,5), 0,0);
+      gbc = new GridBagConstraints(0,0,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.NONE, new Insets(5,0,5,5), 0,0);
       ret.add(_btnOK, gbc);
 
       gbc = new GridBagConstraints(1,0,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.NONE, new Insets(5,5,5,5), 0,0);
