@@ -5,5 +5,7 @@ EditPasteTableNameDlg.OK=OK
 EditPasteTableNameDlg.Cancel=Cancel
 EditPasteTableNameDlg.title=Edit paste table name
 EditPasteTableNameDlg.TableNameEmpty=You must edit a table name
-EditPasteTableNameDlg.text=Edit the table name to paste to. (If the table already exists colmns must match the source table's columns)
+EditPasteTableNameDlg.text=Enter the table name to paste to. (If the table already exists colmns must match the source table's columns)
 EditPasteTableNameDlg.onlyOneTableMsg=Past Table as only works if only a single table was choosen to copy.
+
+EditPasteTableNameDlg.htmlSetNameTo=<html><a href=#1>Set table name to "{0}"</a></html>
